2004-11-16  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (itable, itabli, itabl3): Need to check OK rather
	than assume true=OK

	* Engine/fgens.c: All over removed statics into the environment or
	into arguments.  Make ftfind etc take extra argument.  Should
	assist with reentrance.

2004-11-14  John ffitch  <jpff@codemist.co.uk>

	* util2/exports/het_import.c (main): Open output as binary stream

	* Top/main.c (mainRESET): ftRESET takes environment argument

	* Engine/fgens.c: Move many statics into a single static.  Adjust
	args to gens to reflect this -- statics almost unnecessary

2004-11-11  Michael Gogins <gogins@pipeline.com>

	* Changed the Python interface to CsoundVST to allow Python
	programmers to derive new classes in Python from CsoundVST.Node,
	and these new classes will function as C++ Node * objects in the
	CsoundVST C++ internals. This enables Python-derived Nodes to
	function just like regular C++ Nodes in music graphs. 

2004-11-11  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c: Removed static variables ftp and nargs and used
	arguments instead.  Simplifications all over

2004-11-10  John ffitch  <jpff@codemist.co.uk>

	* H/csdl.h (FLINKAGE): defined

	* Top/dl_opcodes.c: Allow definitions of fgens

	* H/csoundCore.h: Added NGFENS structure

2004-11-09  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (fgens): Started named fgens
	(fterror): Allow named gens in error messages
	(allocgen): New function to allocate new names

2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Fixes to rtpa.c and pa_callback.c for duplex audio, and
	libsnd_u.c forsoundfile input, by Victor Lazzarini.

	* CsoundVST changes directory to that of loaded files.

2004-11-07  John ffitch  <jpff@codemist.co.uk>

	* H/ftgen.h (GENMAX): set to 43 (really part is fgens below)

2004-11-06  John ffitch  <jpff@codemist.co.uk>

	* Engine/musmon.c (sensevents): Need to reset nxtim and nxtbt at
	end of section (not needed in playevents model)
